# ruff

./: .editorconfig  .gitignore  ASYNC_IMPLEMENTATION_GUIDE.md  BENCHMARK_COMPARISON.md  BUG_HUNT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_BENCHMARK_STATUS.md  Cargo.toml  DICT_OPTIMIZATION_PHASE1_RESULTS.md  DOGFOOD_NOTES.md  INSTALLATION.md  KICKSTART.md  LICENSE  NEXT_STEPS.md  PHASE7_CHECKLIST.md  PHASE7_SESSION_SUMMARY.md  PHASE7_STEP5_COMPLETE.md  README.md  ROADMAP.md  SESSION_CHECKPOINT.md  SESSION_SUMMARY_2026-01-28.md  SESSION_SUMMARY_2026-01-28_STEP2.md  SESSION_SUMMARY_2026-01-28_STEP3.md  SESSION_SUMMARY_2026-01-28_STEP5.md  START_HERE_NEXT_SESSION.md  START_HERE_PHASE7_STEP2.md  START_HERE_PHASE7_STEP3.md  START_HERE_PHASE7_STEP4.md  START_HERE_PHASE7_STEP5.md  START_HERE_PHASE7_STEP6.md  build_and_test_jit.sh  commit_jit_fixes.sh  commit_jit_string_fix.sh  debug_add.ruff  do_commit.sh  fix_arc_errors.py  quick_test.sh  run_bench_test.sh  rustfmt.toml  (+66 more)
.github/: AGENT_INSTRUCTIONS.md  HOW_TO_START_AGENT_SESSION.md  IMPLEMENTATION_GUIDE.md
benches/: v1_perf_benchmarks.rs
benchmarks/: debug_loop.ruff  dict_ops.ruff  fibonacci.ruff  higher_order.ruff  nested_loops.ruff  run_all.ruff  run_benchmarks.py  run_benchmarks.ruff  simple_loop_test.ruff
checkpoints/: bench_small_head_39b932d.txt  bench_small_pre_e3af9e2.txt  bench_ssg_small.ruff
config/: reserved_names.toml
docs/: ARCHITECTURE.md  CLI_DUAL_MODE_OUTPUT_INVENTORY.md  CLI_MACHINE_READABLE_CONTRACTS.md  COMMAND_EXTENSION_MODEL.md  CONCURRENCY.md  CROSS_IDE_EXECUTION_PLAN.md  DEPRECATION_POLICY.md  DOCGEN.md  DOCGEN_EXTERNAL_REPOS_EVALUATION_2026-05-18.md  DOCGEN_FEATURE_COMPLETION_ROADMAP.md  EDITOR_ADAPTER_BASELINES.md  ENTERPRISE_READINESS_NEXT_SESSION_2026-05-27.md  EXTENDING.md  FIRST_TOOL_COOKBOOK.md  HETZNER_BENCHMARK_SETUP_AND_PRICING.md  IMAGE_CONVERSION_AGENT_HANDOFF.md  INSTALLATION_LSP_EDITORS.md  INSTALL_MATRIX.md  INTERPRETER_FLAG_DEPENDENCY_MAP.md  KENNEL_NAMESPACE_PLAN.md  LANGUAGE_SPEC.md  LSP_RELIABILITY.md  MEMORY.md  NATIVE_API_SECURITY_POSTURE.md  OPTIONAL_TYPING_DESIGN.md  OUTPUT_HELPER_MIGRATION_NOTE.md  PERFORMANCE.md  PERF_HOT_PATH_AUDIT_2026-05-26.md  PRE_V1_ACTION_CHECKLIST.md  PRE_V1_MASTER_UNFINISHED_CHECKLIST.md  PROTOCOL_CONTRACTS.md  RELEASE_ARTIFACT_CHECKLIST_V0_13_0.md  RELEASE_ARTIFACT_CHECKLIST_V0_14_0.md  RELEASE_ARTIFACT_CHECKLIST_V1_0_0.md  RELEASE_ARTIFACT_VALIDATION.md  RELEASE_BINARY_SIZE_BASELINE_2026-05-26.md  RELEASE_PROCESS.md  REPO_HYGIENE_POLICY.md  RESERVED_NAMES.md  SSG_BENCHMARK_NEXT_STEPS.md  (+16 more)
examples/: README_examples.md  SHOWCASE_PROJECTS.md  arg_parser_demo.ruff  array_higher_order.ruff  array_utilities_demo.ruff  arrays.ruff  assert_debug_demo.ruff  async_await_demo.ruff  async_comprehensive_demo.ruff  async_with_check.ruff  await_test.ruff  backup_tool.ruff  basic_import.ruff  benchmark.ruff  benchmark_async.ruff  benchmark_demo.ruff  benchmark_fib.ruff  benchmark_jit.ruff  benchmark_jit_native.rs  benchmark_simple.ruff  binary_file_demo.ruff  builtins.ruff  cli_tool.ruff  closures_advanced.ruff  closures_counter.ruff  closures_higher_order.ruff  closures_nested.ruff  closures_partial.ruff  collections.ruff  collections_advanced.ruff  comments.ruff  concurrency_channels.ruff  concurrency_parallel_http.ruff  concurrency_spawn.ruff  config_manager.ruff  crypto_aes_example.ruff  crypto_rsa_example.ruff  csv_demo.ruff  database_mysql.ruff  database_pooling.ruff  (+132 more)
extracted/: test_data.txt
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/lexer/: basic_valid.ruff  malformed_escape.ruff
fuzz/corpus/parser/: basic_control_flow.ruff  missing_delimiter.ruff  nested_literals.ruff
fuzz/fuzz_targets/: lexer.rs  parser.rs
notes/: 2026-01-25_14-30_bytecode-vm-completion.md  2026-01-25_14-30_destructuring-spread-implementation.md  2026-01-25_16-00_enhanced-error-messages.md  2026-01-25_17-00_result-option-types-with-bug.md  2026-01-25_17-30_result-option-types-COMPLETED.md  2026-01-25_18-00_enhanced-collections-implementation.md  2026-01-25_20-00_bytecode-compiler-vm-foundation.md  2026-01-25_21-15_bytecode-vm-testing-complete.md  2026-01-25_21-30_env-helpers-implementation.md  2026-01-25_21-45_env-helpers-complete.md  2026-01-25_22-00_bytecode-vm-completion.md  2026-01-25_22-00_compiler-warnings-cleanup.md  2026-01-25_23-15_arg-parser-implementation.md  2026-01-25_io-module-implementation.md  2026-01-25_os-path-modules.md  2026-01-25_stdlib-expansion.md  2026-01-25_testing-framework-foundation.md  2026-01-25_vm-performance-optimization.md  2026-01-26_02-13_net-module-tcp-udp.md  2026-01-26_02-44_iterators-generators-implementation.md  2026-01-26_14-30_interpreter-modularization-gotchas.md  2026-01-26_async-await-complete.md  2026-01-26_async-await-partial-implementation.md  2026-01-26_generator-completion-session.md  2026-01-26_interpreter-modularization-foundation.md  2026-01-26_interpreter-modularization-phase1.md  2026-01-26_interpreter-modularization-phase2.md  2026-01-26_test-failure-analysis-and-gameplan.md  2026-01-26_vm-exception-handling.md  2026-01-26_vm-phase1-weeks1-4-completion.md  2026-01-27_07-46_phase2-vm-optimizations.md  2026-01-27_10-53_phase4b-specialized-codegen.md  2026-01-27_11-02_phase4c-integration.md  2026-01-27_11-15_phase4d-guards.md  2026-01-27_14-51_jit-phase-3-completion.md  2026-01-27_15-03_phase4a-jit-type-profiling-infrastructure.md  2026-01-27_20-54_phase5-tokio-async-runtime.md  2026-01-27_architecture-documentation-complete.md  2026-01-27_call-stack-tracing-errors.md  2026-01-27_phase4e-jit-benchmarking.md  (+304 more)
scripts/: check_jit_safety_contracts.sh  fuzz_repro.sh  fuzz_smoke.sh  (+11 more)
(+580 files in other folders)
