[package]
name = "ruff"
version = "0.6.0"
edition = "2021"
authors = ["Robert DeVore <me@robertdevore.com>"]
description = "Ruff — A lean, expressive programming language"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rufflang/ruff"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1.21.3"
colored = "2.1"
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
regex = "1"
rustyline = "14.0"
tiny_http = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
# MySQL temporarily disabled due to subprocess crate build issues in mysql_common
# Will add in future version with alternative driver
base64 = "0.21"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
oauth2 = "4.4"
urlencoding = "2.1"
toml = "0.8"
serde_yaml = "0.9"
csv = "1.3"
image = "0.25"
