[package]
name = "ruff"
version = "0.9.0"
edition = "2021"
authors = ["Robert DeVore <me@robertdevore.com>"]
description = "Ruff — A lean, expressive programming language"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rufflang/ruff"

[dependencies]
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
once_cell = "1.21.3"
colored = "2.1"
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
regex = "1"
rustyline = "14.0"
tiny_http = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
mysql_async = "0.36"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "io-util", "fs"] }
base64 = "0.21"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
oauth2 = "4.4"
urlencoding = "2.1"
toml = "0.8"
serde_yaml = "0.9"
csv = "1.3"
image = "0.25"
zip = "0.5"
sha2 = "0.10"
md-5 = "0.10"
bcrypt = "0.15"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = "0.10"
nohash-hasher = "0.2"
rayon = "1.10"

# JIT Compilation
cranelift = "0.112"
cranelift-module = "0.112"
cranelift-jit = "0.112"
cranelift-native = "0.112"
target-lexicon = "0.12"

[[example]]
name = "jit_microbenchmark"
path = "examples/jit_microbenchmark.rs"

[[example]]
name = "jit_simple_test"
path = "examples/jit_simple_test.rs"
