[package]
name = "ruff"
version = "1.0.0"
edition = "2021"
authors = ["Robert DeVore <me@robertdevore.com>"]
description = "Ruff — A lean, expressive programming language"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rufflang/ruff"

[features]
default = ["runtime-db", "runtime-image", "runtime-archive", "runtime-jit"]
runtime-db = ["dep:rusqlite", "dep:postgres", "dep:mysql_async"]
runtime-image = ["dep:image"]
runtime-archive = ["dep:zip"]
runtime-jit = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]

[dependencies]
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
once_cell = "1.21.3"
colored = "2.1"
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4"] }
regex = "1"
rustyline = "14.0"
tiny_http = { version = "0.12", features = ["ssl-openssl"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
mysql_async = { version = "0.36", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "io-util", "fs"] }
base64 = "0.21"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "native-tls"] }
urlencoding = "2.1"
toml = "0.8"
serde_yaml = "0.9"
csv = "1.3"
image = { version = "0.25", optional = true }
zip = { version = "0.5", optional = true }
sha2 = "0.10"
md-5 = "0.10"
bcrypt = "0.15"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = "0.10"
nohash-hasher = "0.2"
rayon = "1.10"
mime_guess = "2.0"
infer = "0.16"
libc = "0.2"

# JIT Compilation
cranelift = { version = "0.112", optional = true }
cranelift-module = { version = "0.112", optional = true }
cranelift-jit = { version = "0.112", optional = true }
cranelift-native = { version = "0.112", optional = true }
target-lexicon = { version = "0.12", optional = true }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "jit_microbenchmark"
path = "examples/jit_microbenchmark.rs"

[[example]]
name = "jit_simple_test"
path = "examples/jit_simple_test.rs"

[[bench]]
name = "v1_perf_benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
